--- a/app/src/main/res/layout/activity_selected_week.xml
+++ b/app/src/main/res/layout/activity_selected_week.xml
@@ -7,48 +7,60 @@
     android:background="@color/white"
     tools:context=".SelectedWeekActivity">
 
-    <TextView
-        android:id="@+id/tv_back_sw"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/back_icon"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_margin="10dp"/>
-
-    <TextView
-        android:id="@+id/tv_title_sw"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Schedule For Monday"
-        android:textSize="20sp"
-        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="11dp"/>
+        app:layout_constraintRight_toRightOf="parent">
 
-    <androidx.cardview.widget.CardView
-        android:visibility="gone"
-        android:id="@+id/cv_la"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        app:cardCornerRadius="20dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="5dp"
-        app:cardBackgroundColor="@color/red">
+        <TextView
+            android:id="@+id/tv_back_sw"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/back_icon"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_margin="10dp"/>
 
-        <ImageButton
-            android:id="@+id/btn_add_ef"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/add_icon"
-            android:background="@color/red"
-            />
+        <TextView
+            android:id="@+id/tv_title_sw"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Schedule For Monday"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-    </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_la"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:cardCornerRadius="20dp"
+            android:layout_marginEnd="10dp"
+            app:cardBackgroundColor="@color/red">
+
+            <ImageButton
+                android:id="@+id/btn_add_ef"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/add_icon"
+                android:background="@color/red"
+                />
+
+        </androidx.cardview.widget.CardView>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:visibility="gone"
@@ -56,13 +68,13 @@
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="700dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_title_sw"/>
+        app:layout_constraintTop_toBottomOf="@id/cl1"/>
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/loginlot"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        app:layout_constraintTop_toBottomOf="@id/cv_la"
+        app:layout_constraintTop_toBottomOf="@id/cl1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
