--- a/app/src/main/res/layout/event_fragment.xml
+++ b/app/src/main/res/layout/event_fragment.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:text="UPCOMING EVENTS!"
         android:textSize="20sp"
+        android:textStyle="italic"
         android:fontFamily="sans-serif-light"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -42,7 +43,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_ef"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
         app:layout_constraintTop_toBottomOf="@id/tv_title_ef"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
