--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -5,32 +5,46 @@
     android:background="@color/white"
     android:layout_height="match_parent">
 
-
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="PROFILE"
-        android:textSize="20sp"
-        android:fontFamily="sans-serif-light"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="10dp"/>
+        android:layout_marginTop="10dp"
+        app:layout_constraintRight_toRightOf="parent">
 
-    <TextView
-        android:id="@+id/tv_logout_pf"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:text="Logout"
-        android:textColor="@color/white"
-        android:background="@drawable/custom_input"
-        android:backgroundTint="@color/red"
-        android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="10dp"/>
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PROFILE"
+            android:textSize="20sp"
+            android:fontFamily="sans-serif-light"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="10dp"/>
+
+        <TextView
+            android:id="@+id/tv_logout_pf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Logout"
+            android:textColor="@color/black"
+            android:backgroundTint="@color/red"
+            android:gravity="center"
+            android:drawableEnd="@drawable/logout_icon"
+            android:drawablePadding="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_pf"
@@ -39,7 +53,7 @@
         app:cardCornerRadius="75dp"
         app:cardElevation="10dp"
         android:layout_marginStart="20dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        app:layout_constraintTop_toBottomOf="@id/cl1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="50dp">
@@ -60,7 +74,7 @@
         android:text="Full Name"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        app:layout_constraintTop_toBottomOf="@id/cl1"
         app:layout_constraintLeft_toRightOf="@id/cv_pf"
         android:layout_marginTop="75dp"
         android:layout_marginStart="10dp"/>
