--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -15,26 +15,39 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tv_back_ep"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@drawable/back_icon"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl1"
+                android:layout_width="match_parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="10dp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Edit Profile"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/tv_back_ep"
-                android:layout_marginTop="18dp"
-                android:textSize="28sp"
-                android:fontFamily="sans-serif"
-                android:textStyle="bold"
-                android:layout_marginStart="20dp"/>
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginTop="10dp"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/tv_back_ep"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/back_icon"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_marginStart="10dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Edit Profile"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toRightOf="@id/tv_back_ep"
+                    android:textSize="20sp"
+                    android:fontFamily="sans-serif"
+                    android:textStyle="bold"
+                    android:layout_marginStart="20dp"/>
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv_ep"
@@ -42,7 +55,7 @@
                 android:layout_height="150dp"
                 app:cardCornerRadius="75dp"
                 app:cardElevation="10dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_back_ep"
+                app:layout_constraintTop_toBottomOf="@id/cl1"
                 android:layout_marginTop="30dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent">
@@ -127,7 +140,7 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_save_ep"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:background="@drawable/custom_input"
+                android:background="@drawable/custom_btn_red"
                 android:backgroundTint="@color/red"
                 android:text="Cancel"
                 android:layout_marginStart="20dp"
@@ -135,6 +148,20 @@
                 android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:textColor="@color/white"/>
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/loginlot"
+                android:layout_width="350dp"
+                android:layout_height="300dp"
+                app:layout_constraintTop_toBottomOf="@id/tv_cancel_ep"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:lottie_rawRes="@raw/editlot"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"/>
+
+
+
 
 
 
