--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -119,11 +119,26 @@
                 android:drawablePadding="10dp"/>
 
             <EditText
+                android:id="@+id/et_number_rg"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                app:layout_constraintTop_toBottomOf="@id/et_name_rg"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:hint="Phone number"
+                android:layout_marginTop="20dp"
+                android:inputType="phone"
+                android:drawableStart="@drawable/number_icon"
+                android:drawablePadding="10dp"/>
+
+            <EditText
                 android:id="@+id/et_password_rg"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@id/et_name_rg"
+                app:layout_constraintTop_toBottomOf="@id/et_number_rg"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginStart="30dp"
