--- a/app/src/main/res/layout/activity_show_image.xml
+++ b/app/src/main/res/layout/activity_show_image.xml
@@ -21,7 +21,7 @@
         android:id="@+id/iv_si"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
