--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -56,7 +56,7 @@
         app:layout_constraintTop_toBottomOf="@id/cl1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="50dp">
+        android:layout_marginTop="30dp">
 
         <ImageView
             android:id="@+id/iv_pf"
@@ -67,27 +67,27 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/tv_name_pf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Full Name"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/cl1"
-        app:layout_constraintLeft_toRightOf="@id/cv_pf"
-        android:layout_marginTop="75dp"
+        app:layout_constraintTop_toBottomOf="@id/cv_pf"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="10dp"/>
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/tv_status_pf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="status"
         android:textSize="20sp"
+        android:textColor="@color/grey"
         app:layout_constraintTop_toBottomOf="@id/tv_name_pf"
-        app:layout_constraintLeft_toRightOf="@id/cv_pf"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="10dp"/>
 
     <TextView
@@ -95,7 +95,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Account Information"
-        app:layout_constraintTop_toBottomOf="@id/cv_pf"
+        app:layout_constraintTop_toBottomOf="@id/tv_status_pf"
         android:layout_marginTop="40dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="20dp"
@@ -121,7 +121,7 @@
         android:text="Sample Text"
         android:textColor="@color/grey"
         app:layout_constraintTop_toBottomOf="@id/tb_pf"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
         android:textSize="18sp"
         android:gravity="center"
@@ -136,7 +136,7 @@
         android:text="Sample Text"
         android:textColor="@color/grey"
         app:layout_constraintTop_toBottomOf="@id/tv_fname_pf"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:textSize="18sp"
         android:gravity="center"
@@ -150,7 +150,7 @@
         android:layout_height="wrap_content"
         android:text="Sample Text"
         app:layout_constraintTop_toBottomOf="@id/tv_email_pf"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:textSize="18sp"
         android:textColor="@color/grey"
@@ -165,7 +165,7 @@
         android:layout_height="wrap_content"
         android:text="09123456789"
         app:layout_constraintTop_toBottomOf="@id/tv_statusf_pf"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:textSize="18sp"
         android:gravity="center"
@@ -186,9 +186,20 @@
         android:text="Edit Profile"
         android:gravity="center"/>
 
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/check_logo"
+        app:layout_constraintTop_toBottomOf="@id/tv_edit_pf"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
 
 
     <com.airbnb.lottie.LottieAnimationView
+        android:visibility="gone"
         android:id="@+id/loginlot"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
