--- a/app/src/main/res/layout/activity_add_schedule.xml
+++ b/app/src/main/res/layout/activity_add_schedule.xml
@@ -59,6 +59,7 @@
                 android:layout_margin="10dp"/>
 
             <androidx.cardview.widget.CardView
+                android:visibility="gone"
                 android:id="@+id/cv_as"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
@@ -78,6 +79,7 @@
             </androidx.cardview.widget.CardView>
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/lbl_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -89,6 +91,7 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_back_as"
                 android:layout_marginTop="50dp"/>
             <TextView
+                android:visibility="gone"
                 android:id="@+id/tv_name_as"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -100,6 +103,7 @@
                 android:textSize="15sp"/>
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/lbl_room"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -122,11 +126,26 @@
                 android:layout_marginStart="12dp"
                 android:textSize="15sp"/>
 
+            <TextView
+                android:id="@+id/tv_add_t_as"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add schedule teacher/subject teacher"
+                android:background="@drawable/custom_outline_bg"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_room_as"
+                android:padding="20dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_margin="10dp"
+                android:drawableStart="@drawable/add_icon"
+                android:drawableTint="@color/black"
+                android:gravity="center"/>
+
             <TableRow
                 android:id="@+id/tb"
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
-                app:layout_constraintTop_toBottomOf="@id/cv_as"
+                app:layout_constraintTop_toBottomOf="@id/tv_add_t_as"
                 android:background="@color/grey"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
