--- a/app/src/main/res/layout/show_teacher_item.xml
+++ b/app/src/main/res/layout/show_teacher_item.xml
@@ -33,7 +33,7 @@
 
         <TextView
             android:id="@+id/tv_name_sti"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="Santos,Leandrei"
             app:layout_constraintTop_toTopOf="parent"
@@ -42,17 +42,28 @@
             android:layout_marginStart="10dp"
             android:textSize="18sp"/>
 
-        <TextView
-            android:id="@+id/tv_select_sti"
-            android:layout_width="100dp"
-            android:layout_height="35dp"
-            android:text="Select"
-            android:background="@drawable/custom_outline_bg"
-            app:layout_constraintRight_toRightOf="parent"
-            android:gravity="center"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_la"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:cardCornerRadius="20dp"
             android:layout_marginEnd="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:cardBackgroundColor="@color/red">
+
+            <ImageButton
+                android:id="@+id/buttonSignIn"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/arrow_icon"
+                android:background="@color/red"
+                />
+
+
+        </androidx.cardview.widget.CardView>
+
 
 
 
