--- a/app/src/main/res/layout/schedule_item.xml
+++ b/app/src/main/res/layout/schedule_item.xml
@@ -58,32 +58,42 @@
             android:layout_height="30dp"
             android:background="@drawable/info_icon"
             android:backgroundTint="@color/grey"
-            app:layout_constraintRight_toLeftOf="@id/tv_star_si"
+            app:layout_constraintRight_toLeftOf="@id/cl4"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/tv_reserve_si"
             android:layout_marginEnd="10dp"/>
 
-        <TextView
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:visibility="gone"
-            android:id="@+id/tv_delete_si"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/cross_icon"
+            android:id="@+id/cl4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/tv_reserve_si"
-            android:layout_marginEnd="20dp"/>
+            android:layout_marginEnd="20dp"
+            app:layout_constraintBottom_toTopOf="@id/tv_reserve_si">
 
-        <TextView
-            android:visibility="gone"
-            android:id="@+id/tv_star_si"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/star_icon"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/tv_reserve_si"
-            android:layout_marginEnd="20dp"/>
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/tv_delete_si"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/cross_icon"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/tv_star_si"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/star_icon"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <TextView
             android:visibility="gone"
